i18n: Upgrade translations from crowdin (41e6d46f).

--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/be-BY/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/be-BY/Resources.resw
@@ -3514,13 +3514,13 @@ Secure Core</value>
     <value>VPN Accelerator</value>
   </data>
   <data name="Settings_DiscardChanges_Confirmation_Action">
-    <value>Адхіліць змены</value>
+    <value>Скасаваць змены</value>
   </data>
   <data name="Settings_DiscardChanges_Confirmation_Cancel">
     <value>Працягнуць рэдагаванне</value>
   </data>
   <data name="Settings_DiscardChanges_Confirmation_Title">
-    <value>Адхіліць незахаваныя змены?</value>
+    <value>Скасаваць незахаваныя змены?</value>
   </data>
   <data name="Settings_Features">
     <value>Функцыі VPN</value>
