--- a/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sl-SI/Resources.resw
+++ b/src/Client/Localization/ProtonVPN.Client.Localization/Strings/sl-SI/Resources.resw
@@ -2377,7 +2377,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
     <comment>Refers to the download speed (e.g., Download [new line] 10 MB/s).</comment>
   </data>
   <data name="Flyouts_Speed_KnowledgeBaseLinkTitle">
-    <value>Understanding and increasing VPN connection speeds</value>
+    <value>Razumevanje in povečevanje hitrosti VPN povezave</value>
   </data>
   <data name="Flyouts_Speed_Title">
     <value>Hitrost</value>
@@ -2450,7 +2450,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
     <value>Izkoristite najboljše iz obeh svetov</value>
   </data>
   <data name="Flyouts_Volume_Description">
-    <value>This shows how much traffic has routed through your VPN.</value>
+    <value>To kaže, koliko prometa je potekalo skozi vaš VPN.</value>
   </data>
   <data name="Flyouts_Volume_Download">
     <value>Prenašanje</value>
@@ -2715,7 +2715,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
     <value>Nezaščiteno</value>
   </data>
   <data name="Home_ConnectionDetails_UnprotectedSubLabel">
-    <value>Encrypt your online activity by connecting to VPN.</value>
+    <value>Šifrirajte svojo spletno dejavnost tako, da se povežete z VPN-jem.</value>
   </data>
   <data name="Home_ConnectionDetails_Volume">
     <value>Količina</value>
@@ -2857,7 +2857,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
     <value>Zaščiteni</value>
   </data>
   <data name="LoadingPage_Tip">
-    <value>A better world starts with privacy and digital freedom.</value>
+    <value>Boljši svet se začne z zasebnostjo in digitalno svobodo.</value>
   </data>
   <data name="Login_Error_GetSessionDetailsFailed">
     <value>Pri pridobivanju podrobnosti seje je prišlo do napake. Poskusite ponovno.</value>
@@ -2873,7 +2873,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
     <value>SSO preverjanje ni uspelo. Poskusite ponovno.</value>
   </data>
   <data name="Login_Error_TwoFactorAuthFailed">
-    <value>Incorrect username or password. Please try again.</value>
+    <value>Napačno uporabniško ime ali geslo. Poskusite znova.</value>
   </data>
   <data name="Login_Error_TwoFactorFailed">
     <value>Dvostopenjska avtentikacija ni uspela. Prosimo, prijavite se znova.</value>
@@ -2918,7 +2918,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
     <comment>Message in the loading screen when signing out</comment>
   </data>
   <data name="Map_ConnectTo">
-    <value>Connect - {0}</value>
+    <value>Povežite - {0}</value>
     <comment>A label inside a map pin tooltip. {0} is a placeholder for country, state or city. (eg. "Connect - United States", "Connect - New York")</comment>
   </data>
   <data name="Notifications_KillSwitch_Description">
@@ -2949,7 +2949,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
     <value>Ta različica aplikacije je zastarela. Če želite še naprej uporabljati Proton VPN, morate posodobi aplikacijo.</value>
   </data>
   <data name="Overlay_OutdatedClient_Title">
-    <value>Update Proton VPN to continue</value>
+    <value>Posodobi Proton VPN za nadaljevanje</value>
   </data>
   <data name="Overlay_P2P_Bullet1_Description">
     <value>Our P2P (peer-to-peer) servers let you access P2P networks while still protecting your IP address and online activity.</value>
@@ -3096,7 +3096,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
     <value>This will disable port forwarding for this profile.</value>
   </data>
   <data name="Profile_NetShield_Conflict_Description">
-    <value>This will disable custom DNS for this profile.</value>
+    <value>To bo onemogočilo po meri DNS za ta profil.</value>
   </data>
   <data name="Profile_Options_Description">
     <value>Automatically open a website of your choice when you connect to this profile.</value>
@@ -3447,7 +3447,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
     <value>Protokol</value>
   </data>
   <data name="Settings_Connection_Protocol_NavigationFailed_Action">
-    <value>Go to profiles</value>
+    <value>Pojdi na profile</value>
   </data>
   <data name="Settings_Connection_Protocol_NavigationFailed_Message">
     <value>Trenutno ste povezani s profilom VPN.
@@ -3675,7 +3675,7 @@ Velika obremenitev strežnika lahko upočasni vašo povezavo.</value>
     <value>WireGuard</value>
   </data>
   <data name="Settings_Reconnection_Title">
-    <value>Reconnect to apply changes</value>
+    <value>Znova vzpostavite povezavo za uveljavitev sprememb</value>
   </data>
   <data name="Settings_RestoreDefault">
     <value>Obnovi privzete nastavitve</value>
